--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,12 @@ python-dotenv
 pyyaml
 requests
 spotipy
+speedtest-cli
 tgcrypto
 unidecode
-youtube-search
-youtube-search-python
 lyricsgenius
+youtube-search
+git+https://github.com/alexmercerind/youtube-search-python
+git+https://github.com/Amahocaam/Muzik
+git+https://github.com/MonsterBos/sello-
+git+https://github.com/Amahocaam/Hizk
