--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 aiofiles
 aiohttp
 asyncio
@@ -7,21 +6,19 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
+httpx
+lyricsgenius
 motor
-numpy
-pillow
+pillow==9.5.0
 psutil
 py-tgcalls==0.9.7
 pykeyboard
 pyrogram==2.0.106
 python-dotenv
-pyyaml
+pyyaml==5.3.1
 requests
 spotipy
-speedtest-cli
 tgcrypto
-unidecode
-lyricsgenius
 youtube-search
 git+https://github.com/alexmercerind/youtube-search-python
 git+https://github.com/Amahocaam/Muzik
