--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,26 @@
 aiofiles
 aiohttp
-asyncio
-numpy
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx
 lyricsgenius
 motor
-pillow==9.5.0
+ntgcalls==1.1.2
+pillow 
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrogram==2.0.106
+pymongo
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
-pyyaml==5.3.1
+PyYAML
 requests
+speedtest-cli
 spotipy
 tgcrypto
-youtube-search
-git+https://github.com/alexmercerind/youtube-search-python
-git+https://github.com/Amahocaam/Muzik
-git+https://github.com/MonsterBos/sello-
-git+https://github.com/Amahocaam/Hizk
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+numpy
+yt_dlp
