--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 aiofiles
 aiohttp
+asyncio
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-lyricsgenius
 motor
-ntgcalls==1.1.2
-pillow 
+numpy
+pillow==9.5.0
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pymongo
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
+pyrogram==2.0.106
 python-dotenv
-PyYAML
+pyyaml
 requests
 speedtest-cli
 spotipy
 tgcrypto
-git+https://github.com/alexmercerind/youtube-search-python@main
-git+https://github.com/joetats/youtube_search@master
-numpy
-yt_dlp
+unidecode
+yt-dlp
+youtube-search
+youtube-search-python
