--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ tgcrypto
 unidecode
 lyricsgenius
 youtube-search
+yt-dlp
 git+https://github.com/alexmercerind/youtube-search-python
 git+https://github.com/Amahocaam/Muzik
 git+https://github.com/MonsterBos/sello-
