--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,33 @@
 
 aiofiles
 aiohttp
-asyncio
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
+lyricsgenius
 motor
-numpy
-pillow
+ntgcalls==1.1.2
+pillow 
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrogram==2.0.106
+pymongo
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
-pyyaml
+PyYAML
 requests
-spotipy
 speedtest-cli
+spotipy
 tgcrypto
-unidecode
-lyricsgenius
-youtube-search
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+numpy
 yt-dlp
 unidecode
 git+https://github.com/alexmercerind/youtube-search-python
 git+https://github.com/Amahocaam/Muzik
 git+https://github.com/MonsterBos/sello-
 git+https://github.com/Amahocaam/Hizk
+https://github.com/olurunabirak/Ytl
