--- a/requirements.txt
+++ b/requirements.txt
@@ -30,4 +30,4 @@ git+https://github.com/alexmercerind/youtube-search-python
 git+https://github.com/Amahocaam/Muzik
 git+https://github.com/MonsterBos/sello-
 git+https://github.com/Amahocaam/Hizk
-https://github.com/olurunabirak/Ytl
+git+https://github.com/olurunabirak/Ytl
