--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 aiofiles
 aiohttp
 dnspython
@@ -8,6 +7,7 @@ hachoir
 heroku3
 lyricsgenius
 motor
+ntgcalls==1.1.2
 pillow 
 psutil
 py-tgcalls==0.9.7
@@ -20,9 +20,7 @@ requests
 speedtest-cli
 spotipy
 tgcrypto
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
 numpy
-unidecode
-git+https://github.com/alexmercerind/youtube-search-python
-git+https://github.com/MonsterBos/sello-
-git+https://github.com/Amahocaam/Hizk
-git+https://github.com/olurunabirak/Ytl
+yt_dlp
