--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 aiofiles
 aiohttp
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3
+heroku3==5.1.4
+httpx[http2]==0.27.2
 lyricsgenius
 motor
-ntgcalls==1.1.2
-pillow 
+ntgcalls
+pillow
 psutil
-py-tgcalls==0.9.7
+py-tgcalls==2.0.6
 pykeyboard
-pymongo
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.32.zip
 python-dotenv
-PyYAML
+pyyaml
 requests
 speedtest-cli
 spotipy
-tgcrypto
-git+https://github.com/alexmercerind/youtube-search-python@main
-git+https://github.com/joetats/youtube_search@master
-numpy
-yt_dlp
+https://github.com/rojvv/tgcrypto/archive/main.zip
+unidecode
+yt-dlp
+youtube-search-python
