--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-aiofiles
+asyncio
 aiohttp
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
-hachoir
-heroku3==5.1.4
-httpx[http2]==0.27.2
+heroku3
 lyricsgenius
 motor
-ntgcalls
-pillow
 psutil
-py-tgcalls==0.8.6
-pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.32.zip
+pytube
+py-tgcalls
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-https://github.com/rojvv/tgcrypto/archive/main.zip
-unidecode
-yt-dlp
+urllib3
+uvloop
+flask
+gunicorn
 youtube-search-python
+yt-dlp
+git+https://github.com/KurimuzonAkuma/pyrogram
+git+https://github.com/Vivekkumar-IN/pykeyboard
+git+https://github.com/TelegramPlayGround/pyrogram-tgcrypto
