--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-asyncio
+aiofiles
 aiohttp
-beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
+hachoir
 heroku3
 lyricsgenius
 motor
+ntgcalls==1.1.2
+pillow 
 psutil
-pytube
-py-tgcalls
+py-tgcalls==0.9.7
+pykeyboard
+pymongo
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
-pyyaml
+PyYAML
 requests
 speedtest-cli
 spotipy
-urllib3
-uvloop
-flask
-gunicorn
-youtube-search-python
-yt-dlp
-git+https://github.com/KurimuzonAkuma/pyrogram
-git+https://github.com/Vivekkumar-IN/pykeyboard
-git+https://github.com/TelegramPlayGround/pyrogram-tgcrypto
+tgcrypto
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+numpy
+yt_dlp
