--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
 aiofiles
 aiohttp
-asyncio
-beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx==0.27.2
+lyricsgenius
 motor
-pillow
+ntgcalls==1.1.2
+pillow 
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrofork
+pymongo
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
-pyyaml
+PyYAML
 requests
 speedtest-cli
 spotipy
 tgcrypto
-unidecode
-yt-dlp
-youtube-search
-youtube-search-python
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+numpy
+yt_dlp
 lyricsgenius
