--- a/requirements.txt
+++ b/requirements.txt
@@ -13,15 +13,16 @@ psutil
 py-tgcalls==0.9.7
 pykeyboard
 pymongo
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
 PyYAML
 requests
 speedtest-cli
 spotipy
 tgcrypto
-git+https://github.com/alexmercerind/youtube-search-python@main
-git+https://github.com/joetats/youtube_search@master
 numpy
 yt_dlp
-lyricsgenius
+youtube-search
+git+https://github.com/alexmercerind/youtube-search-python
+git+https://github.com/PlutoOwner/Muzikl
+git+https://github.com/MonsterBos/sello-
+git+https://github.com/Amahocaam/Hizk
