--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,26 @@
-aiofiles
+asyncio
 aiohttp
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
-hachoir
 heroku3
 lyricsgenius
 motor
-ntgcalls==1.1.2
-pillow 
 psutil
-py-tgcalls==0.9.7
-pykeyboard
-pymongo
+pytube
+py-tgcalls
 python-dotenv
-PyYAML
+pyyaml
 requests
 speedtest-cli
 spotipy
-tgcrypto
-numpy
-yt_dlp
-youtube-search
-git+https://github.com/alexmercerind/youtube-search-python
-git+https://github.com/PlutoOwner/Muzikl
-git+https://github.com/MonsterBos/sello-
-git+https://github.com/Amahocaam/Hizk
+urllib3
+uvloop
+flask
+gunicorn
+youtube-search-python
+yt-dlp
+git+https://github.com/KurimuzonAkuma/pyrogram
+git+https://github.com/Vivekkumar-IN/pykeyboard
+git+https://github.com/TelegramPlayGround/pyrogram-tgcrypto
