--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-asyncio
+aiofiles
 aiohttp
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
-heroku3
+hachoir
+heroku3==5.1.4
+httpx[http2]==0.27.2
 lyricsgenius
 motor
+ntgcalls
+pillow
 psutil
-pytube
-py-tgcalls==0.9.7
+py-tgcalls==2.0.6
+pykeyboard
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.32.zip
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-urllib3
-uvloop
-flask
-gunicorn
-youtube-search-python
+https://github.com/rojvv/tgcrypto/archive/main.zip
+unidecode
 yt-dlp
-git+https://github.com/KurimuzonAkuma/pyrogram
-git+https://github.com/Vivekkumar-IN/pykeyboard
-git+https://github.com/TelegramPlayGround/pyrogram-tgcrypto
+youtube-search-python
