--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,25 @@
+numpy
 aiofiles
 aiohttp
-beautifulsoup4
+asyncio
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3==5.1.4
-httpx[http2]==0.27.2
+heroku3
 lyricsgenius
 motor
-ntgcalls
 pillow
 psutil
-py-tgcalls==0.9.7
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.32.zip
+py-tgcalls==0.9.7
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-https://github.com/rojvv/tgcrypto/archive/main.zip
-unidecode
-yt-dlp
+tgcrypto
+youtube-search
 youtube-search-python
+yt-dlp
