--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiofiles
 aiohttp
+asyncio
 dnspython
 ffmpeg-python
 gitpython
@@ -7,22 +8,18 @@ hachoir
 heroku3
 lyricsgenius
 motor
-ntgcalls==1.1.2
-pillow 
+pillow
 psutil
-py-tgcalls==0.9.7
+py-tgcalls==0.9.0
 pykeyboard
-pymongo
+pyrogram==1.4.16
 python-dotenv
-PyYAML
+pyyaml==5.3.1
 requests
 speedtest-cli
 spotipy
 tgcrypto
-numpy
-yt_dlp
+wget
 youtube-search
-git+https://github.com/alexmercerind/youtube-search-python
-git+https://github.com/PlutoOwner/Muzikl
-git+https://github.com/MonsterBos/sello-
-git+https://github.com/Amahocaam/Hizk
+youtube-search-python
+yt-dlp
