--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
 aiofiles
 aiohttp
 asyncio
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-lyricsgenius
+httpx==0.27.2
 motor
 pillow
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrogram==1.4.16
+pyrofork
 python-dotenv
-pyyaml==5.3.1
+pyyaml
 requests
 speedtest-cli
 spotipy
 tgcrypto
-wget
+unidecode
+yt-dlp
 youtube-search
 youtube-search-python
-yt-dlp
