--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,6 @@ unidecode
 urllib3
 wget
 git+https://github.com/KurimuzonAkuma/pyrogram@dev
-yt-dlp
+yt_dlp
 git+https://github.com/alexmercerind/youtube-search-python@main
 git+https://github.com/joetats/youtube_search@master
