--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,28 @@
 aiofiles
 aiohttp
-#asyncio==3.4.3
 asyncio
 beautifulsoup4
 dnspython
 ffmpeg-python
-future==0.18.3
 gitpython
-heroku3
 hachoir
-motor==3.3.2
-pillow==9.5.0
+heroku3
+httpx==0.27.2
+motor
+pillow
 psutil
 py-tgcalls==0.9.7
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 pykeyboard
-pymongo==4.6.3
+pyrofork
 python-dotenv
-pyyaml==6.0.1
+pyyaml
 requests
-SafoneAPI==1.0.65
-tgcrypto
-spotipy
 speedtest-cli
+spotipy
+tgcrypto
 unidecode
-urllib3
-wget
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
-yt_dlp
-git+https://github.com/alexmercerind/youtube-search-python@main
-git+https://github.com/joetats/youtube_search@master
+yt-dlp
+youtube-search
+youtube-search-python
+pyrogram==2.0.106
+lyricsgenius
