--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,29 @@
-aiofiles
-aiohttp
 asyncio
+aiohttp
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
-hachoir
 heroku3
-httpx==0.27.2
+lyricsgenius
 motor
-pillow
 psutil
-py-tgcalls==0.9.7
-pykeyboard
-pyrofork
+pytube
+py-tgcalls
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-tgcrypto
-unidecode
-yt-dlp
-youtube-search
+urllib3
+uvloop
+flask
+gunicorn
 youtube-search-python
+yt-dlp
+git+https://github.com/KurimuzonAkuma/pyrogram
+git+https://github.com/Vivekkumar-IN/pykeyboard
+git+https://github.com/TelegramPlayGround/pyrogram-tgcrypto
+py-tgcalls==0.9.7
 pyrogram==2.0.106
-lyricsgenius
+
