--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ motor
 ntgcalls
 pillow
 psutil
-py-tgcalls==
+py-tgcalls==1.2.9
 pykeyboard
 https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.32.zip
 python-dotenv
