--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,26 @@
 aiofiles
 aiohttp
-beautifulsoup4
+asyncio
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3==5.1.4
-httpx[http2]==0.27.2
+heroku3
+httpx
 lyricsgenius
 motor
-ntgcalls
-pillow
+pillow==9.5.0
 psutil
-py-tgcalls==0.9.7
+py-tgcalls==1.0.1
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.32.zip
+pyrogram==2.0.106
 python-dotenv
-pyyaml
+pyyaml==5.3.1
 requests
-speedtest-cli
 spotipy
-https://github.com/rojvv/tgcrypto/archive/main.zip
-unidecode
-yt-dlp
-youtube-search-python
-yt_dlp
+tgcrypto
+youtube-search
+git+https://github.com/alexmercerind/youtube-search-python
+git+https://github.com/PlutoOwner/Muzikl
+git+https://github.com/MonsterBos/sello-
+git+https://github.com/Amahocaam/Hizk
