--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pyyaml==5.3.1
 requests
 spotipy
 tgcrypto
+yt_dlp
 youtube-search
 git+https://github.com/alexmercerind/youtube-search-python
 git+https://github.com/PlutoOwner/Muzikl
