--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
 aiofiles
 aiohttp
 asyncio
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx
-lyricsgenius
 motor
 pillow==9.5.0
+numpy
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrogram==2.0.106
+pyrofork
 python-dotenv
-pyyaml==5.3.1
+pyyaml
 requests
+speedtest-cli
 spotipy
 tgcrypto
-yt_dlp
+unidecode
+yt-dlp
 youtube-search
-git+https://github.com/alexmercerind/youtube-search-python
-git+https://github.com/PlutoOwner/Muzikl
-git+https://github.com/MonsterBos/sello-
-git+https://github.com/Amahocaam/Hizk
+youtube-search-python
+async_pymongo
+git+https://github.com/EchoGoktu/Hiz
