--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,26 @@
 aiofiles
 aiohttp
-asyncio
-beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
+lyricsgenius
 motor
-pillow==9.5.0
-numpy
+ntgcalls==1.1.2
+pillow 
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrofork
+pymongo
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
-pyyaml
+PyYAML
 requests
 speedtest-cli
 spotipy
 tgcrypto
-unidecode
-yt-dlp
-youtube-search
-youtube-search-python
-async_pymongo
-git+https://github.com/EchoGoktu/Hiz
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+numpy
+yt_dlp
