--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,4 @@ git+https://github.com/alexmercerind/youtube-search-python@main
 git+https://github.com/joetats/youtube_search@master
 numpy
 yt_dlp
+youtube-search-python
