--- a/requirements.txt
+++ b/requirements.txt
@@ -23,4 +23,7 @@ tgcrypto
 numpy
 yt_dlp
 youtube-search
-youtube-search-python
+git+https://github.com/alexmercerind/youtube-search-python
+git+https://github.com/PlutoOwner/Muzikl
+git+https://github.com/MonsterBos/sello-
+git+https://github.com/Amahocaam/Hizk
