--- a/requirements.txt
+++ b/requirements.txt
@@ -7,19 +7,20 @@ hachoir
 heroku3
 lyricsgenius
 motor
+ntgcalls==1.1.2
 pillow 
 psutil
 py-tgcalls==0.9.7
 pykeyboard
 pymongo
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
 PyYAML
 requests
 speedtest-cli
 spotipy
 tgcrypto
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
 numpy
-https://github.com/EchoGoktu/MSearchPy
-https://github.com/EchoGoktu/MSearch
-https://github.com/EchoGoktu/Muzik
-https://github.com/EchoGoktu/Hiz
+yt_dlp
