--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 aiofiles
 aiohttp
-asyncio
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3
+heroku3==5.1.4
+httpx[http2]==0.27.0
+lyricsgenius
 motor
+ntgcalls
 pillow
-httpx==0.25.2
 psutil
 py-tgcalls==0.9.7
 pykeyboard
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.33.zip
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-tgcrypto
+TgCrypto>=1.2.5
 unidecode
 yt-dlp
-youtube-search
 youtube-search-python
-
