--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 aiofiles
 aiohttp
+asyncio
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3==5.1.4
-httpx[http2]==0.27.0
-lyricsgenius
+heroku3
+httpx==0.27.2
 motor
-ntgcalls
 pillow
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.33.zip
+pyrofork
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-TgCrypto>=1.2.5
+tgcrypto
 unidecode
 yt-dlp
+youtube-search
 youtube-search-python
