--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
+httpx==0.25.2
 motor
 pillow
-httpx==0.25.2
+lyricsgenius
 psutil
 py-tgcalls==0.9.7
 pykeyboard
+pyrofork
 python-dotenv
 pyyaml
 requests
@@ -23,4 +25,4 @@ unidecode
 yt-dlp
 youtube-search
 youtube-search-python
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
+
