--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
-aiofiles
-aiohttp
 asyncio
+aiohttp
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
-hachoir
 heroku3
-httpx==0.25.2
-motor
-pillow
+httpx[http2]==0.27.2
 lyricsgenius
+motor
 psutil
+pytube
 py-tgcalls==0.9.7
-pykeyboard
-pyrofork
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-tgcrypto
-unidecode
-yt-dlp
-youtube-search
+TgCrypto>=1.2.5
+urllib3
+uvloop
+flask
+gunicorn
 youtube-search-python
+yt-dlp
+git+https://github.com/KurimuzonAkuma/pyrogram
+git+https://github.com/Vivekkumar-IN/pykeyboard
 
