--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,27 @@
-asyncio
+
+aiofiles
 aiohttp
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
-heroku3
-httpx[http2]==0.27.2
+hachoir
+heroku3==5.1.4
+httpx[http2]==0.27.0
 lyricsgenius
 motor
+ntgcalls
+pillow
 psutil
-pytube
-py-tgcalls==0.9.7
+py-tgcalls==2.0.6
+pykeyboard
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.33.zip
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
 TgCrypto>=1.2.5
-urllib3
-uvloop
-flask
-gunicorn
-youtube-search-python
+unidecode
 yt-dlp
-git+https://github.com/KurimuzonAkuma/pyrogram
-git+https://github.com/Vivekkumar-IN/pykeyboard
-
+youtube-search-python
