--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 aiofiles
 aiohttp
 beautifulsoup4
@@ -15,13 +14,13 @@ pillow
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.33.zip
+Kurigram==2.1.35
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-TgCrypto>=1.2.5
+TgCrypto==1.2.5
 unidecode
-yt-dlp
+yt-dlp>=2024.12.23
 youtube-search-python
