--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 aiofiles
 aiohttp
+asyncio
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3==5.1.4
-httpx[http2]==0.27.0
-lyricsgenius
+heroku3
+httpx==0.27.2
 motor
-ntgcalls
 pillow
 psutil
-py-tgcalls==0.9.7
+py-tgcalls==2.0.1
 pykeyboard
-Kurigram==2.1.35
+pyrofork
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-TgCrypto==1.2.5
+tgcrypto
 unidecode
-yt-dlp>=2024.12.23
+yt-dlp
+youtube-search
 youtube-search-python
