--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiofiles
-aiohttp
+aiohttp==3.9.5
 asyncio
 beautifulsoup4
 dnspython
@@ -8,10 +8,11 @@ gitpython
 hachoir
 heroku3
 httpx==0.27.2
-motor
-pillow
+motor==2.5.0
+pillow==9.5.0
 psutil
 py-tgcalls==0.9.7
+ntgcalls==1.2.0
 pykeyboard
 pyrofork
 python-dotenv
@@ -19,8 +20,13 @@ pyyaml
 requests
 speedtest-cli
 spotipy
+uvloop
 tgcrypto
 unidecode
 yt-dlp
 youtube-search
 youtube-search-python
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
+git+https://github.com/yt-dlp/yt-dlp
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
