--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,24 @@
+numpy
 aiofiles
-aiohttp==3.9.5
+aiohttp
 asyncio
-beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx==0.27.2
-motor==2.5.0
-pillow==9.5.0
+httpx[http2]==0.27.2
+lyricsgenius
+motor
+pillow
 psutil
-py-tgcalls==0.9.7
-ntgcalls==1.2.0
 pykeyboard
-pyrofork
+py-tgcalls==0.9.7
+git+
 python-dotenv
 pyyaml
 requests
 speedtest-cli
-spotipy
-uvloop
 tgcrypto
-unidecode
-yt-dlp
 youtube-search
 youtube-search-python
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
-git+https://github.com/yt-dlp/yt-dlp
-git+https://github.com/alexmercerind/youtube-search-python@main
-git+https://github.com/joetats/youtube_search@master
