--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,27 @@
-numpy
 aiofiles
 aiohttp
-asyncio
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3
-httpx[http2]==0.27.2
+heroku3==5.1.4
+httpx[http2]==0.27.0
 lyricsgenius
 motor
+ntgcalls
 pillow
 psutil
-pykeyboard
 py-tgcalls==0.9.7
-git+
+pykeyboard
+Kurigram==2.1.35
 python-dotenv
 pyyaml
 requests
 speedtest-cli
-tgcrypto
-youtube-search
+spotipy
+TgCrypto==1.2.5
+unidecode
+yt-dlp>=2024.12.23
 youtube-search-python
+numpy
