--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 aiofiles
-aiohttp
+aiohttp==3.10.3
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3==5.1.4
-httpx[http2]==0.27.0
+httpx[http2]
 lyricsgenius
 motor
 ntgcalls
@@ -14,14 +14,13 @@ pillow
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-Kurigram==2.1.35
+kurigram==2.1.37
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-TgCrypto==1.2.5
+TgCrypto
 unidecode
-yt-dlp>=2024.12.23
-youtube-search-python
-numpy
+yt-dlp>=2025.1.15
+https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
