--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
-aiofiles
-aiohttp==3.10.3
+asyncio
+async-lru
+aiohttp
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
-hachoir
-heroku3==5.1.4
+heroku3
 httpx[http2]
+kurigram==2.1.37
 lyricsgenius
 motor
-ntgcalls
-pillow
 psutil
-py-tgcalls==2.0.6
-pykeyboard
-kurigram==2.1.37
+pytube
+py-tgcalls
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
 TgCrypto
-unidecode
-yt-dlp>=2025.1.15
+urllib3
+uvloop
+flask
+gunicorn
+yt-dlp==2025.1.15
 https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
-gtts
+git+https://github.com/Vivekkumar-IN/pykeyboard
