--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,4 @@ gunicorn
 yt-dlp==2025.1.15
 https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
 git+https://github.com/Vivekkumar-IN/pykeyboard
+gTTS
