--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
 aiofiles
-aiohttp==3.10.3
+aiohttp
+asyncio
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3==5.1.4
-httpx[http2]
-lyricsgenius
+heroku3
 motor
-ntgcalls
 pillow
+httpx==0.25.2
 psutil
-py-tgcalls==2.0.2
+py-tgcalls==0.9.7
 pykeyboard
-kurigram==2.1.37
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-TgCrypto
+tgcrypto
 unidecode
-yt-dlp>=2025.1.15
-https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
+yt-dlp
+youtube-search
+youtube-search-python
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
+lyricsgenius
 gtts
