--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,4 @@ youtube-search-python
 https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 lyricsgenius
 gtts
+git+https://github.com/EchoGoktu/Hiz
