--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
 aiofiles
-aiohttp
-asyncio
+aiohttp==3.10.3
 beautifulsoup4
 dnspython
 ffmpeg-python
+Flask==1.1.2
 gitpython
+gunicorn==20.1.0
 hachoir
-heroku3
+heroku3==5.1.4
+httpx[http2]
+lyricsgenius
 motor
+ntgcalls
 pillow
-httpx==0.25.2
 psutil
-py-tgcalls==2.0.6
+py-tgcalls==2.0.2
 pykeyboard
+kurigram==2.1.37
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-tgcrypto
+TgCrypto
 unidecode
-yt-dlp
-youtube-search
-youtube-search-python
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
-lyricsgenius
-gtts
-git+https://github.com/EchoGoktu/Hiz
+werkzeug==2.0.2
+yt-dlp>=2025.1.15
+https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
