--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,29 @@
 aiofiles
-aiohttp==3.10.3
+aiohttp
+asyncio
 beautifulsoup4
 dnspython
 ffmpeg-python
-Flask==1.1.2
 gitpython
-gunicorn==20.1.0
 hachoir
-heroku3==5.1.4
-httpx[http2]
+heroku3
 lyricsgenius
 motor
-ntgcalls
+numpy
 pillow
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-kurigram==2.1.37
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-TgCrypto
+tgcrypto
 unidecode
-werkzeug==2.0.2
-yt-dlp>=2025.1.15
-https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
-gtts
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
+git+https://github.com/yt-dlp/yt-dlp
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+pydantic
+httpx==0.25.2
