--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,29 @@
-kurigram==2.1.39
-numpy
 aiofiles
 aiohttp
 asyncio
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx[http2]==0.27.2
 lyricsgenius
 motor
+numpy
 pillow
 psutil
-pykeyboard
 py-tgcalls==0.9.7
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
+pykeyboard
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
 tgcrypto
-youtube-search
-youtube-search-python
-yt-dlp
+unidecode
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
+git+https://github.com/yt-dlp/yt-dlp
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+pydantic
+httpx==0.25.2
