--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ git+https://github.com/alexmercerind/youtube-search-python@main
 git+https://github.com/joetats/youtube_search@master
 pydantic
 httpx==0.25.2
+gtts
