--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,29 @@
 aiofiles
 aiohttp
-asyncio
 beautifulsoup4
-dnspython
-ffmpeg-python
+Flask
 gitpython
+gunicorn
 hachoir
 heroku3
+Kurigram
 lyricsgenius
 motor
-numpy
+ntgcalls==2.0.5
 pillow
 psutil
 py-tgcalls==0.9.7
-pykeyboard
+PyTgCrypto
 python-dotenv
-pyyaml
+pyyaml~=6.0.2
 requests
 speedtest-cli
 spotipy
-tgcrypto
 unidecode
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
-git+https://github.com/yt-dlp/yt-dlp
-git+https://github.com/alexmercerind/youtube-search-python@main
-git+https://github.com/joetats/youtube_search@master
-pydantic
-httpx==0.25.2
+uvloop
+werkzeug
+yt-dlp
+https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
 gtts
 program
 
