--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,32 @@
+gTTS
+flask
 aiofiles
 aiohttp
+asyncio
 beautifulsoup4
-Flask
+dnspython
+ffmpeg-python
 gitpython
-gunicorn
 hachoir
 heroku3
-Kurigram
-lyricsgenius
+httpx[http2]==0.25.2
 motor
-ntgcalls==2.0.5
-pillow
+numpy
+opencv-python
+pillow==9.5.0
 psutil
 py-tgcalls==0.9.7
-PyTgCrypto
+ntgcalls==1.1.2
+pykeyboard
 python-dotenv
-pyyaml~=6.0.2
+pyyaml
 requests
 speedtest-cli
 spotipy
+tgcrypto
 unidecode
 uvloop
-werkzeug
 yt-dlp
-https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
-gtts
-program
-
+youtube-search
+youtube-search-python
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
