--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,25 @@
-gTTS
-flask
+git+https://github.com/pikaws/worexis-dlp
 aiofiles
 aiohttp
 asyncio
-beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx[http2]==0.25.2
 motor
 numpy
-opencv-python
-pillow==9.5.0
+pillow
 psutil
 py-tgcalls==0.9.7
-ntgcalls==1.1.2
 pykeyboard
+pyrogram==2.0.106
 python-dotenv
 pyyaml
 requests
-speedtest-cli
 spotipy
 tgcrypto
 unidecode
-uvloop
-yt-dlp
 youtube-search
 youtube-search-python
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
+lyricsgenius
