--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,27 @@
-git+https://github.com/pikaws/worexis-dlp
 aiofiles
 aiohttp
 asyncio
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
+httpx==0.27.2
 motor
-numpy
 pillow
 psutil
+lexica-api
 py-tgcalls==0.9.7
 pykeyboard
-pyrogram==2.0.106
+pyrofork
 python-dotenv
 pyyaml
 requests
+speedtest-cli
 spotipy
 tgcrypto
 unidecode
+yt-dlp[default]
 youtube-search
 youtube-search-python
-lyricsgenius
